// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`for cards owned by North with key 0 > createCard > should produce a stable value for Froglet 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 0,
  "owner": "North",
  "type": "Unit",
}
`;

exports[`for cards owned by North with key 0 > createCard > should produce a stable value for LilyPad 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 0,
  "owner": "North",
  "type": "Leaf",
}
`;

exports[`for cards owned by North with key 0 > createLeaf > for the card LilyPad > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 0,
  "owner": "North",
  "type": "Leaf",
}
`;

exports[`for cards owned by North with key 0 > createUnit > for the card Froglet > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 0,
  "owner": "North",
  "type": "Unit",
}
`;

exports[`for cards owned by North with key 3 > createCard > should produce a stable value for Froglet 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 3,
  "owner": "North",
  "type": "Unit",
}
`;

exports[`for cards owned by North with key 3 > createCard > should produce a stable value for LilyPad 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 3,
  "owner": "North",
  "type": "Leaf",
}
`;

exports[`for cards owned by North with key 3 > createLeaf > for the card LilyPad > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 3,
  "owner": "North",
  "type": "Leaf",
}
`;

exports[`for cards owned by North with key 3 > createUnit > for the card Froglet > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 3,
  "owner": "North",
  "type": "Unit",
}
`;

exports[`for cards owned by South with key 1 > createCard > should produce a stable value for Froglet 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 1,
  "owner": "South",
  "type": "Unit",
}
`;

exports[`for cards owned by South with key 1 > createCard > should produce a stable value for LilyPad 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 1,
  "owner": "South",
  "type": "Leaf",
}
`;

exports[`for cards owned by South with key 1 > createLeaf > for the card LilyPad > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 1,
  "owner": "South",
  "type": "Leaf",
}
`;

exports[`for cards owned by South with key 1 > createUnit > for the card Froglet > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 1,
  "owner": "South",
  "type": "Unit",
}
`;

exports[`for cards owned by South with key 2 > createCard > should produce a stable value for Froglet 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 2,
  "owner": "South",
  "type": "Unit",
}
`;

exports[`for cards owned by South with key 2 > createCard > should produce a stable value for LilyPad 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 2,
  "owner": "South",
  "type": "Leaf",
}
`;

exports[`for cards owned by South with key 2 > createLeaf > for the card LilyPad > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "LilyPad",
    "name": "Lily Pad",
    "stats": {
      "gives": 0,
    },
    "type": "Leaf",
  },
  "key": 2,
  "owner": "South",
  "type": "Leaf",
}
`;

exports[`for cards owned by South with key 2 > createUnit > for the card Froglet > should produce a stable value for %s 1`] = `
{
  "cardClass": {
    "cost": 0,
    "key": "Froglet",
    "name": "Froglet",
    "stats": {
      "life": 1,
      "power": 0,
      "range": 0,
      "speed": 1,
    },
    "type": "Unit",
  },
  "damage": 0,
  "isExhausted": false,
  "key": 2,
  "owner": "South",
  "type": "Unit",
}
`;
